<resources>
    <string name="app_name">My Places</string>
    <string name="action_show_map">Show map</string>
    <string name="action_new_place">New place</string>
    <string name="action_my_places">My places</string>
    <string name="action_server_list">Server list</string>
    <string name="action_about">About</string>

    <string name="about_text"><i>My places</i> is the application that will help you remember
        characteristics and locations of your favorite places. It will be able to show your places
        on map and enable you to share the with your friends. Each week this application
        will be better and better and you will earn <i>points</i> from your teaching assistant.
    </string>
    <string name="ok">OK</string>

    <string name="title_activity_my_places_list">My places list</string>
    <string name="myplaceslist_context_view">View place</string>
    <string name="myplaceslist_context_edit">Edit place</string>
    <string name="myplaceslist_context_delete">Delete place</string>
    <string name="myplaceslist_context_show_map">Show on map</string>
    <string name="myplacesList_context_upload">Upload place</string>

    <string name="title_activity_edit_my_place">Edit place</string>
    <string name="editmyplace_name_label">Name</string>
    <string name="editmyplace_desc_label">Description</string>
    <string name="editmyplace_cancel_label">Cancel</string>
    <string name="editmyplace_lat_label">Latitude</string>
    <string name="editmyplace_long_label">Longitude</string>
    <string name="editmyplace_location_label">Get location</string>

    <string name="title_activity_view_my_place">View place</string>
    <string name="viewmyplace_finished_label">OK</string>
    <string name="viewmyplace_show_on_map_label">Show on map</string>

    <string name="title_activity_my_places_map">Map</string>
    <string name="myplacesmap_select_loc_label">Select location</string>
    <string name="myplacesmap_cancel_label">Cancel</string>

    <string name="myplaces_serverlist">Places available on server</string>
    <string name="serverlist_done_label">Done</string>
</resources>
