<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.jajac.myplaces.EditMyPlaceActivity"
    tools:showIn="@layout/activity_edit_my_place">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_name_label" />

    <EditText
        android:id="@+id/editmyplace_name_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/editmyplace_desc_label" />

    <EditText
        android:id="@+id/editmyplace_desc_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:stretchColumns="*">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editmyplace_lat_label" />
                <EditText
                    android:id="@+id/editmyplace_lat_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/editmyplace_long_label" />
                <EditText
                    android:id="@+id/editmyplace_long_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text" />
            </LinearLayout>
            <Button
                android:id="@+id/editmyplace_location_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/editmyplace_location_label"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/editmyplace_finished_button"
                android:layout_weight="1" />

            <Button
                android:id="@+id/editmyplace_cancel_button"
                android:layout_weight="1"
                android:text="@string/editmyplace_cancel_label" />
        </TableRow>
    </TableLayout>


</LinearLayout>
